# hough-coin-counter-parallel

./: README.md
coin-counter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  draw_circles  draw_circles.cpp  edge_detection  edge_detection.cpp  hcc_functions.c  hcc_lib.h  hough_coin_counter_parallel  main.c
coin-counter/files/: circle_coordinates.csv
coin-counter/old/: hcc_functions_OLD.c  main_OLD.c
